# rust-bitcoin-wallet

./: .gitignore  .test.txt.swp  Cargo.toml  build.rs  config-node.bash  docker-compose.yml  myTest.bash  notes.txt  p2wpkh.tx  tapscript-example-with-tap.md  tapscript_example_with_tap.rs  test.txt  tr-test.tx
.devcontainer/: Dockerfile  devcontainer.json
sample/: taproot_ts.sample  v0.sample
src/: README.md  bitcoin_client.rs  bitcoin_client_extended.rs  bitcoin_keys.rs  btc_k.rs  client_node.rs  client_wallet.rs  connections.rs  initialize_client.rs  lib.rs  main.rs  taproot_multi_sig.rs  wallet_p2wpkh.rs
src/api/: controller.rs
src/bitcoin_wallet/: constants.rs  mod.rs  wallet_methods.rs
src/bitcoin_wallet/address_formats/: mod.rs  p2tr_addr_fmt.rs  p2wpkh_addr_fmt.rs
src/bitcoin_wallet/configuration/: p2wpkh_demo.rs  p2wsh_demo.rs  tap_key_demo.rs
src/bitcoin_wallet/input_data/: electrum_rpc.rs  mod.rs  regtest_call.rs  regtest_rpc.rs  reuse_rpc_call.rs  tapscript_ex_input.rs
src/bitcoin_wallet/script_services/: input_service.rs  mod.rs  output_service.rs  psbt_factory.rs
src/bitcoin_wallet/scripts/: mod.rs
src/bitcoin_wallet/spending_path/: adaptor_script.rs  mod.rs  musig.rs  p2tr_key_path.rs  p2wpkh_script_path.rs  p2wsh_path.rs  scripts.rs  tap_script_spending_ex.rs
src/btc_k/: mod.rs  p2tr.rs  p2wpk.rs
src/btc_wallet/: config.rs  constants.rs  lock.rs  mod.rs  sign_tx.rs  submit.rs  unlock.rs  utils.rs  wallet_methods.rs  wallet_traits.rs
src/btc_wallet/address_formats/: mod.rs  p2tr_addr_fmt.rs  p2wpkh_addr_fmt.rs
src/btc_wallet/address_schema/: mod.rs  p2tr.rs  p2wpkh.rs
src/btc_wallet/custom_spending_paths/: mod.rs
src/btc_wallet/input_data/: electrum_rpc.rs  json_input.rs  mod.rs  reuse_rpc_call.rs  tapscript_ex_input.rs  test_rpc_call.rs
src/btc_wallet/p2tr/: mod.rs
src/btc_wallet/p2wpkh/: mod.rs
src/btc_wallet/script_services/: api.rs  input_service.rs  mod.rs  (+1 more)
src/configuration/: mod.rs  musig_demo.rs  p2wpkh_demo.rs  p2wsh_demo.rs  script_demo.rs  tap_key_demo.rs  tap_script_demo.rs
src/context/: lightningd  lightningd.dockerfile  lnd  lnd.dockerfile  tapd.dockerfile
src/examples/: connections.rs  init_wallet.rs
src/lighting/: clighting.rs  lighting_demo.rs  lnd.rs  mod.rs
src/lighting_wallet/: base_protocal.rs  mod.rs
src/service/: handler.rs
src/simple_wallet/: bisq.rs  mod.rs  p2tr.rs  p2tr_key.rs  p2tr_script.rs  p2wpkh.rs  p2wsh.rs
src/wallet_test/: mod.rs  tapscript_example_with_tap.rs  wallet_test_vector_traits.rs
wallet_test/: mod.rs  musig_demo.rs  wallet-test-vectors.json
(+15 files in other folders)
