[package]
name = "traproot-bdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

miniscript={version="9.0.0"}
bitcoin={ version = "0.29.1", features=["rand","std"]}
bitcoin_hashes = { version = "0.11.0", default-features = false }
electrum-client = "0.12.0"
bitcoincore-rpc = "0.16.0"
clightningrpc = "0.2.0"

# tonic = "0.8.3"
# tonic-openssl = { version = "0.2" }
# hyper = "0.14"
# hyper-openssl = "0.9"
# prost = "0.11.5"
# tokio = { version = "1", features = ["full"] }
# tokio-stream = { version = "0.1", features = ["net"] }
# openssl = "0.10"
# tower = "0.4"
# pretty_env_logger = "0.4.0"
# hex = "0.4.3"

tokio = { version = "1", features = ["full"] }
tonic = "0.8.3"
tonic-openssl = { version = "0.2" }
hyper = "0.14"
hyper-openssl = "0.9"
prost = "0.11.5"
tokio-stream = { version = "0.1", features = ["net"] }
openssl = "0.10"
tower = "0.4"
pretty_env_logger = "0.4.0"
hex = "0.4.3"
serde = "1.0.156"

[build-dependencies]
tonic-build = "0.8.4"


